--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: 'Roboto', sans-serif;
+  background-color: #f5f5f5;
+}
+
+.container {
+  display: flex;
+}
+
+.controls {
+  /* TODO: create better styling for controller */
+  display: flex;
+  align-items: center;
+}
+
+.grid {
+  display: flex;
+  border: 2px red solid;
+  border-radius: 1rem;
+  flex-flow: row wrap;
+  height: 70rem;
+  width: 70rem;
+  position: relative;
+  justify-content: space-around;
+}
+
 .box {
-  border: 2px black solid;
+  border: 0.5px solid rgba(114, 200, 240, 0.3);
+  border-radius: 0.5rem;
 }
